--- a/app/src/main/res/layout/item_catalog_chip.xml
+++ b/app/src/main/res/layout/item_catalog_chip.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:minHeight="36dp"
-    android:minWidth="90dp"
-    android:gravity="center"
-    android:checkable="true"
-    android:textAlignment="center"
-    android:textColor="@color/chip_text_color"
-    style="@style/Widget.MaterialComponents.Chip.Choice"
-    app:chipBackgroundColor="@color/chip_background_selector"
-    app:chipCornerRadius="18dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp" />
+    android:layout_marginEnd="8dp"
+    android:focusable="true"
+    android:clickable="true"
+    android:foreground="@drawable/selector_focus_border">
+
+    <TextView
+        android:id="@+id/chipText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_catalog_background"
+        android:textColor="@android:color/white"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+</FrameLayout>
