--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,15 @@
         android:background="#000000">
 
         <FrameLayout
+            android:id="@+id/fragmentContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/userAvatarContainer"
             android:layout_width="56dp"
             android:layout_height="56dp"
@@ -18,6 +27,8 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?attr/selectableItemBackground"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -35,7 +46,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-        </FrameLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <HorizontalScrollView
             android:id="@+id/navigationScroll"
@@ -44,10 +55,10 @@
             android:scrollbars="none"
             android:paddingStart="80dp"
             android:paddingEnd="16dp"
+            android:elevation="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/fragmentContainer">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.chip.ChipGroup
                 android:layout_width="wrap_content"
@@ -112,15 +123,6 @@
 
             </com.google.android.material.chip.ChipGroup>
         </HorizontalScrollView>
-
-        <FrameLayout
-            android:id="@+id/fragmentContainer"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/navigationScroll"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
