--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="button_background">#E50914"</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- App Colors -->
+    <color name="netflix_red">#E50914</color>
+    <color name="netflix_red_dark">#B20710</color>
+    <color name="white">#FFFFFF</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="gray_dark">#333333</color>
+    <color name="gray_medium">#888888</color>
+    <color name="gray_light">#BBBBBB</color>
 
-    <!-- FIX: Defined missing colors causing the build error -->
-    <color name="app_background">#121212</color> <!-- Dark background -->
-    <color name="colorAccent">#FF03DAC5</color>   <!-- Standard Teal Accent -->
-    <!-- Common colors often referenced in similar layouts -->
+    <!-- Background Colors -->
     <color name="background_gradient_start">#000000</color>
     <color name="background_gradient_end">#DDDDDD</color>
     <color name="fastlane_background">#0096a6</color>
     <color name="search_opaque">#ffaa3f</color>
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
+
+    <!-- Button Colors -->
+    <color name="button_background_normal">#333333</color>
+    <color name="button_background">#333333</color>
+
+    <!-- Chip Colors -->
+    <color name="indigo_600">#4F46E5</color>
+    <color name="gray_800">#1F2937</color>
+    <color name="gray_700">#374151</color>
+
+    <!-- App Background (for Settings, etc) -->
+    <color name="app_background">#000000</color>
+
+    <!-- Accent Color -->
+    <color name="colorAccent">#E50914</color>
 </resources>
