--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme using Material Components -->
     <style name="Theme.StremioMPVPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#E50914</item>
@@ -11,7 +11,7 @@
 
         <!-- TV Focus highlighting -->
         <item name="android:colorFocusedHighlight">#FFE50914</item>
-        <item name="android:focusedByDefault">true</item>
+        <item name="android:focusedByDefault" tools:targetApi="26">true</item>
     </style>
 
     <!-- Android TV Leanback Theme with better focus -->
