--- a/app/src/main/res/color/chip_background_selector.xml
+++ b/app/src/main/res/color/chip_background_selector.xml
@@ -1,4 +1,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#B20710EE" android:state_checked="true" />
-    <item android:color="#FF6200EE" />
+    <item android:color="#E50914" android:state_checked="true" />
+    <item android:color="#E50914" android:state_selected="true" />
+
+    <item android:color="#00000000" android:state_focused="true"/>
+
+    <item android:color="#00000000" />
 </selector>
