--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Focused state -->
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#E50914" />
+            <solid android:color="#000000" />
             <corners android:radius="8dp" />
-            <stroke android:width="3dp" android:color="#FFFFFF" />
+            <stroke android:width="3dp" android:color="#E50914" />
         </shape>
     </item>
 
-    <!-- Pressed state -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="#B20710" />
             <corners android:radius="8dp" />
+            <stroke android:width="3dp" android:color="#E50914" />
         </shape>
     </item>
 
-    <!-- Default state -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#333333" />
+            <solid android:color="#000000" />
             <corners android:radius="8dp" />
+            <stroke android:width="1dp" android:color="#FFFFFF" />
         </shape>
     </item>
 </selector>
