--- a/app/src/main/res/drawable/selector_focus_border.xml
+++ b/app/src/main/res/drawable/selector_focus_border.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <stroke android:width="3dp" android:color="#FF0000" />
+            <stroke android:width="3dp" android:color="#E50914" />
             <solid android:color="#00000000" />
         </shape>
     </item>
