--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:background="@drawable/button_background"
+            app:backgroundTint="@null"
             android:text="Configure TMDB Token"
             android:textColor="@android:color/white"
             android:focusable="true"
@@ -78,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:background="@drawable/button_background"
+            app:backgroundTint="@null"
             android:text="Configure AIOStreams Credentials"
             android:textColor="@android:color/white"
             android:focusable="true"
