--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#000000" />
+            <solid android:color="#00000000" />
             <corners android:radius="8dp" />
             <stroke android:width="3dp" android:color="#E50914" />
         </shape>
@@ -18,7 +18,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#000000" />
+            <solid android:color="#00000000" />
             <corners android:radius="8dp" />
             <stroke android:width="1dp" android:color="#FFFFFF" />
         </shape>
