--- a/app/src/main/res/drawable/selector_focus_border.xml
+++ b/app/src/main/res/drawable/selector_focus_border.xml
@@ -4,11 +4,13 @@
         <shape android:shape="rectangle">
             <stroke android:width="3dp" android:color="#E50914" />
             <solid android:color="#00000000" />
-        </shape>
+            <corners android:radius="12dp" /> </shape>
     </item>
+
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#00000000" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
 </selector>
