Update visual assets

--- a/app/src/main/res/color/chip_stroke_selector.xml
+++ b/app/src/main/res/color/chip_stroke_selector.xml
@@ -4,5 +4,5 @@
 
     <item android:color="#E50914" android:state_checked="true" />
 
-    <item android:color="#FFFFFF" />
+    <item android:color="#ffffff" />
 </selector>
