--- a/app/src/main/res/color/chip_background_selector.xml
+++ b/app/src/main/res/color/chip_background_selector.xml
@@ -2,7 +2,7 @@
     <item android:color="#E50914" android:state_checked="true" />
     <item android:color="#E50914" android:state_selected="true" />
 
-    <item android:color="#00000000" android:state_focused="true"/>
+    <item android:color="#1C0B0C" android:state_focused="true"/>
 
-    <item android:color="#00000000" />
+    <item android:color="#1C0B0C" />
 </selector>
