--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme using Material Components -->
     <style name="Theme.StremioMPVPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#E50914</item>
         <item name="colorPrimaryDark">#B20710</item>
@@ -9,12 +8,12 @@
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">#BBBBBB</item>
 
-        <!-- TV Focus highlighting -->
         <item name="android:colorFocusedHighlight">#FFE50914</item>
         <item name="android:focusedByDefault" tools:targetApi="26">true</item>
+
+        <item name="editTextStyle">@style/BlackOnWhiteEditText</item>
     </style>
 
-    <!-- Android TV Leanback Theme with better focus -->
     <style name="Theme.StremioMPVPlayer.Leanback" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@android:color/black</item>
         <item name="colorPrimary">#E50914</item>
@@ -23,9 +22,10 @@
         <item name="android:colorFocusedHighlight">#FFE50914</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowContentOverlay">@null</item>
+
+        <item name="editTextStyle">@style/BlackOnWhiteEditText</item>
     </style>
 
-    <!-- TV Button Style with clear focus -->
     <style name="TVButton" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">18sp</item>
@@ -39,9 +39,15 @@
         <item name="android:focusableInTouchMode">true</item>
     </style>
 
-    <!-- Fullscreen theme for player -->
     <style name="Theme.StremioMPVPlayer.Fullscreen" parent="Theme.StremioMPVPlayer">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="BlackOnWhiteEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textColorHint">#888888</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:padding">12dp</item>
     </style>
 </resources>
